--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,13 @@ Login page
 	<h3>Login here :</h3>
 	<form action ="" method ='POST'>
 		{% csrf_token %}
+			{% if error %}
+			<ul>
+				{% for e in error %}
+					<li>{{ e }}</li>
+				{% endfor %}
+			</ul>
+			{% endif %}
 			{{ form.as_table }}
 	<input type='submit' value='login'>
 	</form>
