view venues functionality added

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,12 @@
 		<title>
 			{% block title %}	{% endblock %}	
 		</title>
+		<style>
+			{% block style %}	{% endblock %}
+		</style>
 	</head>
 	<body>
+		<h3 style="margin-left:5%;font-size:60px;">Welcome to VENUE MONK</h3>
 		{% block body %}	{% endblock %}
 	</body>
 </html>
