App modified, models modified, addvenue function added

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@ body {
 <p id="form-head" style="color:ffffff ;margin-left:6%;font-size:40px;margin-top:-5%;">
        Here's the list of currently available venues <br/>
 </p>
-<a href="/venue/add/"><input type="button" value ="Add a venue"></a>
-<a href="/venue/list/"><input type="button" value="ViewList"></a></br>
+<a href="/venuemonk/add/"><input type="button" value ="Add a venue"></a>
+<a href="/venuemonk/list/"><input type="button" value="ViewList"></a></br>
 <a href = "/logout/"><input type="button" value = "logout" ></a>
 {% endblock %}
