Venue delete functionality added

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
 			{% block style %}	{% endblock %}
 		</style>
 	</head>
-	<body>
+	<body style="background-color:#5d9ab2;">
 		<h3 style="margin-left:5%;font-size:60px;">Welcome to VENUE MONK</h3>
 		{% block body %}	{% endblock %}
 	</body>
