--- a/templates/home.html
+++ b/templates/home.html
@@ -9,9 +9,12 @@ body {
 {% endblock %}
 {% block body %}
 <p id="form-head" style="color:ffffff ;margin-left:6%;font-size:40px;margin-top:-5%;">
-       Here's the list of currently available venues <br/>
+       <h3>Planning a party, meeting or an occasion?<br/>we will find
+	the perfect Venue for your event.
+       </h3> <br/>
 </p>
 <a href="/venuemonk/add/"><input type="button" value ="Add a venue"></a>
 <a href="/venuemonk/list/"><input type="button" value="ViewList"></a></br>
+<a href="/venuemonk/delete/"><input type="button" value="Delete a venue"></a></br>
 <a href = "/logout/"><input type="button" value = "logout" ></a>
 {% endblock %}
