--- a/templates/register/logout.html
+++ b/templates/register/logout.html
@@ -3,6 +3,6 @@
 {% block body %}
 <h3> You have succesfully logged out! </h3>
 <a href ="/login/">
-<input typr="button" value = "login"/>
+<input type="button" value = "login"/>
 </a>
 {% endblock %} 
